--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -13,4 +13,10 @@
       <ProjectReference Include="..\CopierPluginBase\CopierPluginBase.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="config.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
